# multifield-adaptive-retrieval

./: Dockerfile  README.md  SECURITY.md  SUPPORT.md  pyproject.toml
mfar/: download_queries.py  stark_to_trec.py  util.py
mfar/commands/: create_bm25s_index.py  mask_fields.py  precompute_bm25s_scores.py  train.py
mfar/commands/stark/: download_queries.py  stark_to_trec.py
mfar/data/: dataset.py  format.py  index.py  negative_sampler.py  schema.py  trec.py  typedef.py  util.py
mfar/modeling/: contrastive.py  losses.py  util.py  weighting.py
scripts/: compare_results.py  corpus_stats.py  find_failures.py
