[tool.poetry]
name = "mfar"
version = "0.1.0"
description = ""
authors = ["Patrick Xia <patrickxia@microsoft.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
torch = "^2.6.0"  # torch 1.13 has cuda linking issues when custom cuda is present on AzureML machines
tqdm = "^4.65.0"
transformers = ">4.27.4" # This was exactly 4.27.4 because of mlflow related issues, check back on it later?
datasets = "^2.11.0"
xmltodict = "^0.13.0"
mwparserfromhell = "^0.6.4"
fire = "^0.5.0"
beir = "^1.0.1"
gdown = "^4.7.1"
mashumaro = "^3.7"
ipython = "^8.12.0"
pytorch-lightning = "^2.0.2"
more-itertools = "^9.1.0"
tensorboardX = "^2.6.0"
pyarrow = "=15.0.0"
jsonlines = "^4.0.0"
bm25s = {extras = ["full"], version = "^0.1.10"}
wandb = "^0.17.5"
stark-qa = "^0.1.3"
pystemmer = "^2.2.0.1"
jax = {extras = ["cpu"], version = "^0.4.31"}
mlflow-skinny = "^2.15.1"
azureml-mlflow = "^1.57.0"



[[tool.poetry.source]]
name = "aiinfra"
url = "https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/onnxruntime-cuda-12/pypi/simple/"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
